kafka connect: use local cache for monotonically inreasing offset commits
Signed-off-by: Thomas Thornton <thomaswilliamthornton@gmail.com>